# ggj2k26

./: CMakeLists.txt  auto_detect.sh  emojis.txt  example.txt  log.txt  run.sh
_WIP/: example.txt
assets/: amazin.ascii  ggj.ascii  rph.ascii
code/actions/inc/: action.h
code/actions/src/: action.c
code/modules/inc/: mod_convey.h  mod_cut.h  mod_deliver.h  mod_garbage.h  mod_junction.h  mod_loader.h  mod_paint.h  mod_power_supply.h  mod_push.h  module.h
code/modules/src/: mod_convey.c  mod_cut.c  mod_deliver.c  mod_garbage.c  mod_junction.c  mod_loader.c  mod_paint.c  mod_power_supply.c  mod_push.c  module.c
code/product/inc/: product.h
code/product/src/: product.c
config/: events.cfg
inc/: action.h  draw.h  error.h  events.h  game.h  mod_convey.h  mod_junction.h  module.h  parameters.h  update.h  user_data.h  utils.h
modules/src/: mod_convey.c  mod_junction.c  module.c
src/: draw.c  error.c  events.c  game.c  main.c  mod_convey.c  mod_junction.c  module.c  update.c  user_data.c  utils.c
